--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
     <strong>2.29 Scription Part 2 START (zip)</strong></a></p></li>
   <li><p><a href="./zips/2.29-ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.29 Scription Part 2 Snippets (zip)</strong></p></li>
+    <strong>2.29 Scription Part 2 Snippets (zip)</strong></a></p></li>
   <li><p><a href="./zips/2.29-FlexSliderFiles-START.zip" 
     target="_blank" rel="noreferrer noopener">
     <strong>2.29 FlexSlider Files (zip)</strong></a></p></li>
