--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ series of challenges.</p>
 <ul>
   <li><a href="./pdfs/2.28-JS-ScrollEffects.pdf" 
     target="_blank" rel="noreferrer noopener">
-    2.28 JS Scroll Effects (pdf)</li>
+    2.28 JS Scroll Effects (pdf)</a></li>
 </ul>
 
 <ol start="29" type="1">
