--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><p><a href="./pdfs/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</strong></p></li>
+    <strong>2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</strong></a></p></li>
   <li><p><a href="./pdfs/2.39 ScriptionSitePart2-InteractionChallenges.pdf" 
     target="_blank" rel="noreferrer noopener">
-	<strong>2.39 Scription Site Part 2 Interchange Challenges (pdf)</strong></p></li>
+	<strong>2.39 Scription Site Part 2 Interchange Challenges (pdf)</strong></a></p></li>
 </ul>
 
 <h3><strong>Week 3. Intro to Objects and Data in JavaScript</strong></h3>
@@ -245,7 +245,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="./pdfs/3.07-JS-Objects-Data.pdf" 
     target="_blank" rel="noreferrer noopener">
-	<strong>3.07 JS Objects &amp; Data (pdf)</strong></li>
+	<strong>3.07 JS Objects &amp; Data (pdf)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -255,7 +255,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="./pdfs/3.08-PigDiceGame-Diagrams.pdf" 
     target="_blank" rel="noreferrer noopener">
-    <strong>3.08 Pig Dice Game Diagrams (pdf)</strong></li>
+    <strong>3.08 Pig Dice Game Diagrams (pdf)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -278,7 +278,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="./zips/4.02-GameofPig-START.zip" 
     target="_blank" rel="noreferrer noopener">
-    <strong>4.02 Game of Pig START (zip)</strong></li>
+    <strong>4.02 Game of Pig START (zip)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -299,7 +299,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="./pdfs/4.14-GameofPig.pdf" 
     target="_blank" rel="noreferrer noopener"> 
-    <strong>4.14 Game of Pig (pdf)</strong></li>
+    <strong>4.14 Game of Pig (pdf)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -421,7 +421,7 @@ series of challenges.</p>
 <ul>
   <li><a href="./pdfs/2.17-jQuery-PageLocationTracking.pdf" 
     target="_blank" rel="noreferrer noopener">
-    2.17 jQuery Page Location Tracking (pdf)</li>
+    2.17 jQuery Page Location Tracking (pdf)</a></li>
 </ul>
 
 <ol start="18" type="1">
@@ -431,7 +431,7 @@ series of challenges.</p>
 <ul>
   <li><a href="./zips/2.18-JS-ScrollEffects-START.zip" 
     target="_blank" rel="noreferrer noopener">
-    2.18 Scroll Effects START (zip)</li>
+    2.18 Scroll Effects START (zip)</a></li>
 </ul>
 
 <ol start="19" type="1">
@@ -488,8 +488,7 @@ series of challenges.</p>
 <ul>
   <li><a href="./pdfs/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     target="_blank" rel="noreferrer noopener">
-    2.39 Scription Site Part 1 HTML &amp; CSS</a></li>
-  <li>2.39 PDF of Presentations</li>
+    2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</a></li>
 </ul>
 
 <h3>Module (Week) Three:</h3>
