--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><p><a href="./pdfs/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     target="_blank" rel="noreferrer noopener">
     <strong>2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</strong></a></p></li>
-  <li><p><a href="./pdfs/2.39 ScriptionSitePart2-InteractionChallenges.pdf" 
+  <li><p><a href="./pdfs/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
     target="_blank" rel="noreferrer noopener">
 	<strong>2.39 Scription Site Part 2 Interchange Challenges (pdf)</strong></a></p></li>
 </ul>
@@ -228,7 +228,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <ul>
   <li><a href="./zips/3.02-JS-Objects-START.zip" 
     target="_blank" rel="noreferrer noopener">
-	<strong>3.02 JS Objects START (zip)</strong></li>
+	<strong>3.02 JS Objects START (zip)</strong></a></li>
 </ul>
 
 <blockquote>
@@ -385,9 +385,9 @@ series of challenges.</p>
 </ol>
 
 <ul>
-  <li><p><a href="./zips/2.02-jQuery-ScrollEffects-START.zip" 
+  <li><a href="./zips/2.02-jQuery-ScrollEffects-START.zip" 
     target="_blank" rel="noopener noreferrer">
-    2.02 jQuery Scroll Effects START (zip)</a></p></li>
+    2.02 jQuery Scroll Effects START (zip)</a></li>
 </ul>
 
 <ol start="3" type="1">
