--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@ series of challenges.</p>
   <li><a href="./zips/2.29-ScriptionPart2-START.zip" 
     target="_blank" rel="noreferrer noopener">
     2.29 Scription Part 2 START (zip)</a></li>
-  <li><a href="./zips/2.29 ScriptionPart1-Snippets.zip" 
+  <li><a href="./zips/2.29-ScriptionPart1-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
     2.29 Scription Part 1 Snippets (zip)</a></li>
-  <li><a href="./zips/2.29 ScriptionPart2-Snippets.zip" 
+  <li><a href="./zips/2.29-ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener">
 	2.29 Scription Part 2 Snippets (zip)</a></li>
 </ul>
