--- a/index.html
+++ b/index.html
@@ -4865,9 +4865,9 @@ interactions as you scroll down the page, all done in JQuery. We'll do
 the same script, and play JavaScript.</p>
 
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/yRvxe/pdf-of-presentation"
+  <li><a href="./pdf/2.17-jQuery-PageLocationTracking.pdf" 
     target="_blank" rel="noreferrer noopener">
-    2.17 jQueryPage-Location-Tracking.pdf (28 pgs).</a></li>
+    2.17 jQuery Page Location Tracking (pdf) (28 pgs).</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-18">2.18 Introduction to Scroll Effects with JS</h2>
@@ -6269,9 +6269,9 @@ with it without even going to a library, like Animated On Scroll. But,
 that's up to you.</p>
 
 <ul>
-  <li><a href="./pdf/2.28-JavaScriptScrollEffect.pdf"
+  <li><a href="./pdf/2.28-JS-ScrollEffects.pdf"
     target="_blank" rel="noreferrer noopener">
-    2.28 JavaScript-Scroll-Effect.pdf</a></li>
+    2.28 JS Scroll Effects (pdf)</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch2-29">2.29 Scription Site Introduction (5:54)</h2>
@@ -9332,18 +9332,12 @@ building bigger, more sophisticated programs and we're going to have
 time to build in this course. But I want to at least introduce you to
 the topics.</p>
 
-<h2 id="pdf-of-presentations-1">PDF of Presentations</h2>
-
-<p>Here is a PDF of the presentation slides used in the lessons for this
-section:</p>
-<p><b>Objects and Data in JavaScript</b>.</p>
-<p><a
-href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0RJjt/pdf-of-presentations"
-class="uri">https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/0RJjt/pdf-of-presentations</a></p>
+<h3 id="3.07-pdf">JavaScript Objects &amp; Data PDF Files</h3>
 
 <ul>
-  <li><p><b>3.07 Objects-&amp;-Data-in-JS.pdf</b></p></li>
-  <li><p><b>3.07 JavaScript-Object-Challenges.pdf</b></p></li>
+  <li><p><b><a href="3.07-JS-Objects-Data.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    3.07 JS Objects &amp; Data (pdf)</a></b></p></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2 id="ch3-08">3.08 Intro to Pig Dice Game (5:44)</h2>
@@ -9802,14 +9796,15 @@ them down into smaller pieces.</p>
 modular pieces as much as you can. And to really think about which
 functionality you need for each piece.</p>
 
-<h2 id="pdf-of-presentions">PDF of Presentions</h2>
+<h2 id="ch3-11-pdf">Intro to Pig Dice Game pdf Files</h2>
 
 <ul>
-  <li><b>3.11 Intro-to-Pig-Dice-Games.pdf</b></li>
+  <li><b><a href="./pdf/3.11 Intro-to-Pig-Dice-Games.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    3.11 Intro to Pig Dice Game (pdf)</a></b></li
 </ul>
 
 <blockquote>
-  <p>https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/Ucp5v/pdf-of-presentations</p>
   <p><a
   href="https://d3c33hcgiwev3.cloudfront.net/wRpMd6i4TaiaTHeouG2osQ_7c411f98779849398ce95c23f23fedf1_WEB1092_M03_Introduction-to-Pig-Dice-Game.pdf?Expires=1704585600&amp;Signature=dokAhbfdxI3qs5xjHcknMvZaX3kGHaQXYpYx2bHBBs6aaQ7SGPsvdCoVyqRrWHZhy3ZByrVjrK7dn7-D0N1FPTVv2GCEyv8zc3dUaTwu2RJbwQQxQyXm79L-bvq92s77lcIpJbGPtkHECDJeUIF1YbpMtLKeYoyoBovQ1WOm8Lg_&amp;Key-Pair-Id=APKAJLTNE6QMUY6HBC5A"
   class="uri">https://d3c33hcgiwev3.cloudfront.net/wRpMd6i4TaiaTHeouG2osQ_7c411f98779849398ce95c23f23fedf1_WEB1092_M03_Introduction-to-Pig-Dice-Game.pdf?Expires=1704585600&amp;Signature=dokAhbfdxI3qs5xjHcknMvZaX3kGHaQXYpYx2bHBBs6aaQ7SGPsvdCoVyqRrWHZhy3ZByrVjrK7dn7-D0N1FPTVv2GCEyv8zc3dUaTwu2RJbwQQxQyXm79L-bvq92s77lcIpJbGPtkHECDJeUIF1YbpMtLKeYoyoBovQ1WOm8Lg_&amp;Key-Pair-Id=APKAJLTNE6QMUY6HBC5A</a></p>
@@ -11637,10 +11632,12 @@ interesting better game. I look forward to seeing what people post on
 the discussion board. I'll check in from time to time and see what
 excellent versions people have made of the big game.</p>
 
+
+
 <ul>
-  <li><a href="https://www.coursera.org/learn/interactivity-javascript-jquery/supplement/QxK0k/pdf-of-presentation"
+  <li><a href="./pdfs/4.14-Game-of-Pig.pdf" 
     target="_blank" rel="noreferrer noopener">
-    4.14 Game-of-Pig.pdf</a>
+    4.14 Game of Pig (pdf)</a>
   </li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -11673,12 +11670,13 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <p>..the end…</p>
 
 <h6>Prior Update 1/30/2024 9:07pm</h6>
-<h6>Last Updated 3/23/2024 7+ am</h6>
-<h6>Last Updated 3/23/2024 3+ pm</h6>
-<h6>Last Updated 3/24/2024 5+ pm</h6>
-<h6>Last Updated 3/30/2024 3+ pm</h6>
-<h6>Last Updated 4/25/2024 11+ pm</h6>
-<h6>Last Updated 5/5/2024 4+ pm</h6>
+<h6>Prior Updated 3/23/2024 7+ am</h6>
+<h6>Prior Updated 3/23/2024 3+ pm</h6>
+<h6>Prior Updated 3/24/2024 5+ pm</h6>
+<h6>Prior Updated 3/30/2024 3+ pm</h6>
+<h6>Prior Updated 4/25/2024 11+ pm</h6>
+<h6>Prior Updated 5/5/2024 4+ pm</h6>
+<h6>Last Updated 5/8/2024 10+ pm</h6>
 
 </body>
 </html>
