--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./zips/2.18-ScrollEffects-START.zip" 
+  <li><a href="./zips/2.18-JS-ScrollEffects-START.zip" 
     target="_blank" rel="noreferrer noopener">
     <strong>2.18 JS Scroll Effects START (zip)</strong></a></li>
 </ul>
@@ -171,12 +171,6 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <blockquote>
   <h4><a href="#ch2-29"><strong>2.29 Scription Site Introduction</strong></a></h4>
 </blockquote>
-
-<ul>
-  <li><a href=".zips/2.29-ScriptionSite.zip" 
-    target="_blank" rel="noreferrer noopener">
-    <strong>2.29 Scription Site.zip</strong></a></li>
-</ul>
 
 <ul>
   <li><p><a href="./zips/2.29-ScriptionPart1-START.zip" 
@@ -240,9 +234,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><strong>3.07 PDF-of-Presentations.pdf</strong></li>
-</ul>
-<ul>
+  <li><a href="./pdfs/3.07-JS-Object-Challenges.pdf" 
+    target="_blank" rel="noreferrer noopener">
+	<strong>3.07 JS Objects Challenges (pdf)</strong></a></li>
   <li><a href="./pdfs/3.07-JS-Objects-Data.pdf" 
     target="_blank" rel="noreferrer noopener">
 	<strong>3.07 JS Objects &amp; Data (pdf)</strong></a></li>
@@ -265,7 +259,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><strong>3.11 IntrotoPigDiceGame.pdf</strong></li>
+  <li><a href="./pdfs/3.11-Intro-Pig-Dice-Game.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    <strong>3.11 Introduction to Pig Dice Game (pdf)</strong></a></li>
 </ul>
 
 <h3><strong>Week 4. Building a Simple Game in JavaScript</strong></h3>
@@ -509,7 +505,9 @@ problem down into smaller pieces.</p>
 </ol>
 
 <ul>
-  <li>3.02 Start Files: Working with Objects in JavaScript</li>
+  <li><a href="./zips/3.02-JS-Objects-START.zip" 
+    target="_blank" rel="noreferrer noopener">
+    3.02 JS Objects START zip Files</li>
 </ul>
 
 <ol start="3" type="1">
@@ -521,7 +519,9 @@ problem down into smaller pieces.</p>
 </ol>
 
 <ul>
-  <li>3.07 PDF of Presentations</li>
+  <li><a href="./pdfs/3.07-JS-Object-Challenges.pdf" 
+    target="_blank" rel="noreferrer noopener">
+    3.07 JS Object Challenges (pdf)</li>
 </ul>
 
 <ol start="8" type="1">
@@ -1029,7 +1029,7 @@ for a future as a JavaScript developer.</p>
 
 <p>Here is a PDF of the presentation slides used in the lessons for this section:</p>
 
-<h4>jQuery Plugins PDF</h4>
+<h4 id="ch1-05-pdf">jQuery Plugins PDF Files</h4>
 
 <ul>
   <li><a href="./pdfs/1.05-jQuery-Plugins.pdf" 
@@ -1042,7 +1042,7 @@ A <b>zip file</b> is defined as: a computer file whose contents include
 one or more files that are compressed for storage or transmission, often
 carrying the extension .ZIP.</p>
 
-<h4>START Files: FlexSlider &amp; jQuery Plugins</h4>
+<h4 id="ch1-05-zip">jQuery FlexSlider Plugins START zip Files</h4>
 
 <ul>
   <li><a href="./zip_files/1.05-FlexSliderBasic-START.zip" 
