--- a/index.html
+++ b/index.html
@@ -1268,9 +1268,9 @@ and we want the minified version, notice here, the non-minified version
 is 57KB, the minified version is less than half of that in size. We want
 people to have to download the smallest file possible. We need the CSS
 file and we're actually going to need this fonts folder. The fonts
-folder includes a font that as the next button in the previous button
+folder includes a font that as the next  in the previous 
 that will show up on the slider, so, we need that in order for this
-‘next’ and ‘previous’ buttons to load properly. We will need that as
+‘next’ and ‘previous’ s to load properly. We will need that as
 well.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~ 33/34. flexslider.css, fonts & minified flexslider (27) ~~~~~~~~~~~~~~~~~~-->
@@ -1651,7 +1651,7 @@ that it works. Close this, refresh.</p>
   style="width:50%" >
 
 <p>Look at that, we have a kitten slider, and it's working, I get my
-errors, I get these buttons down here, so I've got this additional
+errors, I get these s down here, so I've got this additional
 functionality, and it's working. It's doing everything it's supposed to
 do.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
