--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" type="image/jpg" href="./images/favicon.ico">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Brian Bauska (bbauska)" />
   <meta name="title" content="UC at Davis' Interactivity with JS and jQuery" />
@@ -30,19 +31,17 @@
   </header>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~ 01. jquery & javascript logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed"
+<img class="border"
   src="./images/image001.png"
+  style="width:30%; float: left; margin-left: 20%; margin-bottom: 1em;"
   title="jQuery and JavaScript logo"
-  alt="jQuery and JavaScript logo."
-  style="width:30%" >
-<br><br>
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 02. uc davis logo (01) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<img class="displayed"
+  alt="jQuery and JavaScript logo." />
+<img class="border"
   src="./images/image002.png"
+  style="width:20%; float: left; margin-left: 10%; margin-bottom: 1em;"
   title="University of California @Davis logo"
-  alt="University of California @Davis logo."
-  style="width:20%" >
+  alt="University of California @Davis logo." />
+<p style="clear: both;"></p>
 
 <h3>About this Course</h3>
 
@@ -62,11 +61,11 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ hoverable dropdown menu ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <h2><a href="#table-of-contents">Table of Contents</a></h2>
-
+<p id="table-of-contents"></p>
 <h3><strong>Week 1: jQuery Plugins and Capturing the Scroll Event</strong></h3>
 
 <blockquote>
-  <h4><a href="#ch1-01"><strong>1.00 Welcome!</strong></a></h4>
+  <h4><a href="#ch1-00"><strong>1.00 Welcome!</strong></a></h4>
   <h4><a href="#ch1-01"><strong>1.01 Module 1 Introduction</strong></a></h4>
   <h4><a href="#ch1-02"><strong>1.02 Intro to jQuery Plugins</strong></a></h4>
   <h4><a href="#ch1-03"><strong>1.03 Using Plugins and Essential Steps</strong></a></h4>
@@ -234,9 +233,9 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><a href="./pdfs/3.07-JS-Object-Challenges.pdf" 
+  <li><p><a href="./pdfs/3.07-JS-Object-Challenges.pdf" 
     target="_blank" rel="noreferrer noopener">
-	<strong>3.07 JS Objects Challenges (pdf)</strong></a></li>
+	<strong>3.07 JS Objects Challenges (pdf)</strong></a></p></li>
   <li><a href="./pdfs/3.07-JS-Objects-Data.pdf" 
     target="_blank" rel="noreferrer noopener">
 	<strong>3.07 JS Objects &amp; Data (pdf)</strong></a></li>
@@ -644,7 +643,7 @@ guidelines and the Coursera Honor Code here:</p>
     rel="noopener noreferrer" target="_blank"> Coursera’s Honor Code</a></li>
 </ul>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-01">1.01 Welcome! Course Introduction (0:40)</h2>
+<h2 id="ch1-00">1.00 Welcome! Course Introduction (0:40)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 03. course intro (1.01) (08) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -667,7 +666,7 @@ We're going to do a lot in this course. Let's break out our code editors
 and our web browsers and get started and learn even more about
 JavaScript.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-02">1.02 Module Introduction</h2>
+<h2 id="ch1-01">1.01 Module Introduction</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 04. module 1 intro (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -686,7 +685,7 @@ you've done manually by creating your own sliders is really instructive
 and useful. Plus, you end up with a great tool for creating slider
 elements on web pages and that's really pretty fun.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-03">1.03 Introduction to jQuery Plugins (3:49)</h2>
+<h2 id="ch1-02">1.02 Introduction to jQuery Plugins (3:49)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 05. intro to jquery plugins (09) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -780,7 +779,7 @@ a lot of features and functionality. What if you want the tabs to run
 down the side of the tabbed interface rather than across the tab? You
 could do that thing.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-04">1.04 Using Plugins and Essential Steps (4:22)</h2>
+<h2 id="ch1-03">1.03 Using Plugins and Essential Steps (4:22)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~ 10. using plugins and essential steps (1.04) (13) ~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -872,7 +871,7 @@ way. The documentation may look a little bit different; the directions
 may be written a little bit different, but it's the same basic steps
 each time.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<h2 id="ch1-05">1.05 Gotchas and Rookie Mistakes (8:52)</h2>
+<h2 id="ch1-04">1.04 Gotchas and Rookie Mistakes (8:52)</h2>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~ 13. gotchas and rookie mistakes (1.05) (16) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -9335,7 +9334,7 @@ the topics.</p>
 <h3 id="3.07-pdf">JavaScript Objects &amp; Data PDF Files</h3>
 
 <ul>
-  <li><p><b><a href="3.07-JS-Objects-Data.pdf" 
+  <li><p><b><a href="https://inter-jquery.bauska.org/pdfs/3.07-JS-Objects-Data.pdf" 
     target="_blank" rel="noreferrer noopener">
     3.07 JS Objects &amp; Data (pdf)</a></b></p></li>
 </ul>
@@ -11676,7 +11675,8 @@ you'll get more practice. So I look forward to seeing you there.</p>
 <h6>Prior Updated 3/30/2024 3+ pm</h6>
 <h6>Prior Updated 4/25/2024 11+ pm</h6>
 <h6>Prior Updated 5/5/2024 4+ pm</h6>
-<h6>Last Updated 5/8/2024 10+ pm</h6>
+<h6>Prior Updated 5/8/2024 10+ pm</h6>
+<h6>Last Updated 5/17/2024 10+ am</h6>
 
 </body>
 </html>
