--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><a href="./pdf/1.04-jQuery-Plugins.pdf" 
+  <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
     alt="1.04 jQuery Plugins (pdf)." 
     target="_blank" rel="noreferrer noopener">
-	1.04 jQuery Plugins (pdf)</a></p></li>
-  <li><p><a href="./zip/1.04-FlexSliderBasic-START.zip" 
+	1.04 jQuery Plugins (pdf)</a></li>
+  <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     alt="1.04 Flex Slider Basic START (zip download)." 
     target="_blank" rel="noopener noreferrer">
-	1.04 Flex Slider Basic START (zip download)</a></p></li>
-  <li><p><a href="./zip/1.04-FlexSlider-Plugin.zip" 
+	1.04 Flex Slider Basic START (zip download)</a></li>
+  <li><a href="./zip/1.04-FlexSlider-Plugin.zip" 
     alt="1.04 Flex Slider Plugin (zip download)." 
     target="_blank" rel="noopener noreferrer">
-	1.04 Flex Slider Plugin (zip download)</a></p></li>
+	1.04 Flex Slider Plugin (zip download)</a></li>
 </ul>
 
 <blockquote>
@@ -208,26 +208,26 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><a href="./zip/2.29-ScriptionPart1-START.zip" 
+  <li><a href="./zip/2.29-ScriptionPart1-START.zip" 
     target="_blank" rel="noreferrer noopener" 
 	alt="2.29 Scription Part 1 START (zip download).">
-    2.29 Scription Part 1 START (zip download)</a></p></li>
-  <li><p><a href="./zip/2.29-ScriptionPart1-Snippets.zip" 
+    2.29 Scription Part 1 START (zip download)</a><br><br></li>
+  <li><a href="./zip/2.29-ScriptionPart1-Snippets.zip" 
     target="_blank" rel="noreferrer noopener" 
 	alt="2.29 Scription Part 1 Snippets (zip download).">
-    2.29 Scription Part 1 Snippets (zip download)</a></p></li>
-  <li><p><a href="./zip/2.29-ScriptionPart2-START.zip" 
+    2.29 Scription Part 1 Snippets (zip download)</a><br><br></li>
+  <li><a href="./zip/2.29-ScriptionPart2-START.zip" 
     target="_blank" rel="noreferrer noopener"
 	alt="2.29 Scription Part 2 START (zip download).">
-    2.29 Scription Part 2 START (zip download)</a></p></li>
-  <li><p><a href="./zip/2.29-ScriptionPart2-Snippets.zip" 
+    2.29 Scription Part 2 START (zip download)</a><br><br></li>
+  <li><a href="./zip/2.29-ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener" 
 	alt="2.29 Scription Part 2 Snippets (zip download).">
-    2.29 Scription Part 2 Snippets (zip download)</a></p></li>
-  <li><p><a href="./zip/2.29-FlexSliderFiles-START.zip" 
+    2.29 Scription Part 2 Snippets (zip download)</a><br><br></li>
+  <li><a href="./zip/2.29-FlexSliderFiles-START.zip" 
     target="_blank" rel="noreferrer noopener" 
 	alt="2.29 Flex Slider Files START (zip download).">
-    2.29 Flex Slider Files START (zip download)</a></p></li>
+    2.29 Flex Slider Files START (zip download)</a></li>
 </ul>
 
 <blockquote>
@@ -244,14 +244,14 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
+  <li><a href="./pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     alt="2.39 Scription Site Part 1 HTML &amp; CSS (pdf)."
     target="_blank" rel="noreferrer noopener">
-    2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</a></p></li>
-  <li><p><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
+    2.39 Scription Site Part 1 HTML &amp; CSS (pdf)</a><br><br></li>
+  <li><a href="./pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
     alt="2.39 Scription Site Part 2 Interchange Challenges (pdf)." 
     target="_blank" rel="noreferrer noopener">
-	2.39 Scription Site Part 2 Interchange Challenges (pdf)</a></p></li>
+	2.39 Scription Site Part 2 Interchange Challenges (pdf)</a></li>
 </ul>
 
 <h3><strong>Week 3. Intro to Objects and Data in JavaScript</strong></h3>
@@ -277,10 +277,10 @@ for breaking larger programs into smaller, more manageable pieces.</p>
 </blockquote>
 
 <ul>
-  <li><p><a href="./pdf/3.07-JS-Object-Challenges.pdf" 
+  <li><a href="./pdf/3.07-JS-Object-Challenges.pdf" 
     alt="3.07 JavaScript Object Challenges (pdf)."
     target="_blank" rel="noreferrer noopener">
-	3.07 JS Objects Challenges (pdf)</a></p></li>
+	3.07 JS Objects Challenges (pdf)</a><br><br></li>
   <li><a href="./pdf/3.07-JS-Objects-Data.pdf" 
     alt="3.07 JavaScript Objects and Data (pdf)."
     target="_blank" rel="noreferrer noopener">
@@ -379,15 +379,15 @@ image sliders.</p>
 </ol>
 
 <ul>
-  <li><p><a href="./pdf/1.04-jQuery-Plugins.pdf" 
+  <li><a href="./pdf/1.04-jQuery-Plugins.pdf" 
     target="_blank" rel="noreferrer noopener">
-	<strong>1.04 jQuery Plugins (pdf)</strong></a></p></li>
-  <li><p><a href="./zip/1.04-FlexSliderBasic-START.zip" 
+    <strong>1.04 jQuery Plugins (pdf)</strong></a><br><br></li>
+  <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     target="_blank" rel="noopener noreferrer">
-	<strong>1.04 FlexSlider Basic START (zip download)</strong></a></p></li>
-  <li><p><a href="./zip/1.04-FlexSlider-Plugin.zip" 
+    <strong>1.04 FlexSlider Basic START (zip download)</strong></a><br><br></li>
+  <li><a href="./zip/1.04-FlexSlider-Plugin.zip" 
     target="_blank" rel="noopener noreferrer">
-	<strong>1.04 FlexSlider Plugin (zip download)</strong></a></p></li>
+    <strong>1.04 FlexSlider Plugin (zip download)</strong></a></li>
 </ul>
 
 <ol start="6" type="1">
@@ -402,10 +402,10 @@ image sliders.</p>
 </ol>
 
 <ul>
-  <li><p><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
+  <li><a href="./pdf/1.12-jQuery-FlexSliderPlugin.pdf" 
     alt="1.12 jQuery Flex Slider Plugin (pdf)."
     target="_blank" rel="noopener noreferrer">
-    <strong>1.12 jQuery Flex Slider Plugin (pdf)</strong></a></p></li>
+    <strong>1.12 jQuery Flex Slider Plugin (pdf)</strong></a></li>
 </ul>
 
 <h3>Module (Week) Two:</h3>
