--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ problem down into smaller pieces.</p>
   <li><a href="./pdf/3.07-JS-Object-Challenges.pdf" 
     alt="3.07 JavaScript Object Challenges (pdf)."
     target="_blank" rel="noreferrer noopener">
-    3.07 JS Object Challenges (pdf)</li>
+    3.07 JS Object Challenges (pdf)</a></li>
 </ul>
 
 <ol start="8" type="1">
