--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
     alt="1.04 Flex Slider Basic START (zip download)." 
     target="_blank" rel="noopener noreferrer">
 	1.04 Flex Slider Basic START (zip download)</a></li>
-  <li><a href="./zip/1.04-FlexSlider-Plugin.zip" 
+  <li><a href="./zip/1.04-FlexSliderPlugin.zip" 
     alt="1.04 Flex Slider Plugin (zip download)." 
     target="_blank" rel="noopener noreferrer">
 	1.04 Flex Slider Plugin (zip download)</a></li>
@@ -385,7 +385,7 @@ image sliders.</p>
   <li><a href="./zip/1.04-FlexSliderBasic-START.zip" 
     target="_blank" rel="noopener noreferrer">
     <strong>1.04 FlexSlider Basic START (zip download)</strong></a><br><br></li>
-  <li><a href="./zip/1.04-FlexSlider-Plugin.zip" 
+  <li><a href="./zip/1.04-FlexSliderPlugin.zip" 
     target="_blank" rel="noopener noreferrer">
     <strong>1.04 FlexSlider Plugin (zip download)</strong></a></li>
 </ul>
