--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ problem down into smaller pieces.</p>
 </ol>
 
 <ul>
-  <li>3.11 PDF of Presentations</li>
+  <li>3.11 Intro to Pig Dice Game</li>
 </ul>
 
 <h3>Module (Week) Four:</h3>
@@ -617,7 +617,7 @@ script in many creative ways.</p>
 
 <ol type="1">
   <li>Module Introduction</li>
-  <li>Introduction to the Game of Pig</li>
+  <li>Intro to the Game of Pig</li>
 </ol>
 
 <ul>
@@ -640,7 +640,7 @@ script in many creative ways.</p>
 </ol>
 
 <ul>
-  <li>4.14 PDF of Presentation</li>
+  <li>4.14 Game of Pig</li>
 </ul>
 
 <ol start="15" type="1">
@@ -11688,10 +11688,8 @@ interesting better game. I look forward to seeing what people post on
 the discussion board. I'll check in from time to time and see what
 excellent versions people have made of the big game.</p>
 
-
-
 <ul>
-  <li><a href="./pdf/4.14-Game-of-Pig.pdf" 
+  <li><a href="./pdf/4.14-GameofPig.pdf" 
     alt="4.14 Game of Pig (pdf)." 
     target="_blank" rel="noreferrer noopener">
     4.14 Game of Pig (pdf)</a>
